# av1utl

./: .editorconfig  .gitignore  CLAUDE.md  biome.json  lefthook.yml  package.json  vite.config.ts
.github/: copilot-instructions.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: play_video_file.rs  play_video_file_with_ges.rs
src-tauri/src/: lib.rs  main.rs
src/components/: timeline-scrubber.tsx  video-preview.tsx
src/lib/: commands.ts  time.ts
src/routes/: __root.tsx  index.tsx
